cont t19 g3